# lpfgaz

./: .gitignore  README.md  pyproject.toml
src/lpf2pleiades/: lpf.py
src/lpfgaz/: lpf.py  lpf_name.py  strings.py
tests/: test_lpf.py  test_name.py
tests/data/: example_lpf.jsonld
